Changes some css on desc. page to fix minor layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ button {
 .desc-title {
   color: #fff;
   font-size: 30px;
+  padding-right: 10px;
 }
 
 .imbd-rating {
@@ -192,7 +193,12 @@ button {
 }
 
 .plot {
+  position: absolute;
+  left: 400px;
+  top: 180px;
   padding: 10px;
+  padding-bottom: 30px;
+  margin-bottom: 100px;
 }
 
 .plot-title {
@@ -202,8 +208,8 @@ button {
 }
 
 .imbd-link {
-  position: relative;
-  top: 35px;
+  position: absolute;
+  top: 100%;
   left: 0;
   padding: 10px;
   background-color: #40e080;
